@@ -1,4 +1,7 @@
 ver 0.20.15 (not yet released)
+* state file
+  - make mount point restore errors non-fatal
+  - fix crash when restoring mounts with incompatible database plugin
 
 ver 0.20.14 (2018/01/01)
 * database
